# fastapi-metrics

./: README.md  pyproject.toml
getting-started/: main.py
instrumentation/: example.db  main.py  metrics.py  traces.py
prometheus/: README.md  main.py
